fix(mobile): wrap and smaller type

--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,13 @@ output {
   width: 80vw;
   font-family: serif;
   height: 10rem;
+  flex-wrap: wrap;
 }
 
 output span {
   display: flex;
-  font-size: 8rem;
-  height: 100%;
-  width: 100%;
+  font-size: 6rem;
+  min-width: 10rem;
   align-items: center;
   justify-content: center;
 }
@@ -49,4 +49,16 @@ output span.wrong {
 
 output span.upcoming {
   opacity: 0.5;
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 10px !important;
+  } 
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 6px !important;
+  } 
 }
